--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,4 @@
-_tflow_select=2.3.0=eigen
-absl-py=0.13.0=py38haa95532_0
-aiohttp=3.7.4.post0=py38h2bbff1b_2
-astor=0.8.1=py38haa95532_0
-astunparse=1.6.3=py_0
-async-timeout=3.0.1=py38haa95532_0
-attrs=21.2.0=pyhd3eb1b0_0
-blas=1.0=mkl
-blinker=1.4=py38haa95532_0
-brotlipy=0.7.0=py38h2bbff1b_1003
-bzip2=1.0.8=he774522_0
-ca-certificates=2021.10.26=haa95532_2
-cachetools=4.2.2=pyhd3eb1b0_0
-certifi=2021.10.8=py38haa95532_0
-cffi=1.15.0=py38h2bbff1b_0
-chardet=4.0.0=py38haa95532_1003
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.0.3=pyhd3eb1b0_0
-colorama=0.4.4=pypi_0
-coverage=5.5=py38h2bbff1b_2
-cryptography=3.4.8=py38h71e12ea_0
-cython=0.29.24=py38h604cdb4_0
-dataclasses=0.8=pyh6d0b6a4_7
-flask=2.0.2=pypi_0
-gast=0.4.0=pyhd3eb1b0_0
-google-auth=1.33.0=pyhd3eb1b0_0
-google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-google-pasta=0.2.0=pyhd3eb1b0_0
-grpcio=1.36.1=py38hc60d5dd_1
-h5py=2.10.0=py38h5e291fa_0
-hdf5=1.10.4=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-idna=3.2=pyhd3eb1b0_0
-importlib-metadata=4.8.1=py38haa95532_0
-intel-openmp=2021.4.0=haa95532_3556
-itsdangerous=2.0.1=pypi_0
-jinja2=3.0.3=pypi_0
-keras-applications=1.0.8=py_1
-keras-preprocessing=1.1.2=pyhd3eb1b0_0
-libffi=3.4.2=h604cdb4_1
-libprotobuf=3.17.2=h23ce68f_1
-markdown=3.3.4=py38haa95532_0
-markupsafe=2.0.1=pypi_0
-mkl=2021.4.0=haa95532_640
-mkl-service=2.4.0=py38h2bbff1b_0
-mkl_fft=1.3.1=py38h277e83a_0
-mkl_random=1.2.2=py38hf11a4ad_0
-multidict=5.1.0=py38h2bbff1b_2
-numpy=1.21.2=py38hfca59bb_0
-numpy-base=1.21.2=py38h0829f74_0
-oauthlib=3.1.1=pyhd3eb1b0_0
-openssl=1.1.1l=h2bbff1b_0
-opt_einsum=3.3.0=pyhd3eb1b0_1
-pillow=8.4.0=pypi_0
-pip=21.2.2=py38haa95532_0
-protobuf=3.17.2=py38hd77b12b_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycparser=2.21=pyhd3eb1b0_0
-pyjwt=2.1.0=py38haa95532_0
-pyopenssl=21.0.0=pyhd3eb1b0_1
-pyreadline=2.1=py38_1
-pysocks=1.7.1=py38haa95532_0
-python=3.8.12=h6244533_0
-requests=2.26.0=pyhd3eb1b0_0
-requests-oauthlib=1.3.0=py_0
-rsa=4.7.2=pyhd3eb1b0_1
-scipy=1.7.1=py38hbe87c03_2
-setuptools=58.0.4=py38haa95532_0
-six=1.16.0=pyhd3eb1b0_0
-sqlite=3.36.0=h2bbff1b_0
-tensorboard=2.4.0=pyhc547734_0
-tensorboard-plugin-wit=1.6.0=py_0
-tensorflow=2.3.0=mkl_py38h8c0d9a2_0
-tensorflow-base=2.3.0=eigen_py38h75a453f_0
-tensorflow-estimator=2.6.0=pyh7b7c402_0
-termcolor=1.1.0=py38haa95532_1
-tk=8.6.11=h2bbff1b_0
-typing-extensions=3.10.0.2=hd3eb1b0_0
-typing_extensions=3.10.0.2=pyh06a4308_0
-tzdata=2021e=hda174b7_0
-urllib3=1.26.7=pyhd3eb1b0_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-werkzeug=2.0.2=pyhd3eb1b0_0
-wheel=0.37.0=pyhd3eb1b0_1
-win_inet_pton=1.1.0=py38haa95532_0
-wincertstore=0.2=py38haa95532_2
-wrapt=1.12.1=py38he774522_1
-xz=5.2.5=h62dcd97_0
-yarl=1.6.3=py38h2bbff1b_0
-zipp=3.6.0=pyhd3eb1b0_0
-zlib=1.2.11=h62dcd97_4
+Flask==2.0.2
+numpy==1.21.2
+tensorflow==2.3.0
+Werkzeug==2.0.2
